--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
+== Summary
+This is the API for a web app that automatically produces a 4-year plan for college students based on course lists, majors, minors, and elective options. I developed it over the summer after having prototyped the algorithms with a team of classmates during the 2016 UCSC Hackathon. We were inspired by the endless hassle of maintaining a courseplan amid changing course offerings and major/minor/elective decisions. Such a service should be offered to all students, augmenting the efforts of academic advisors.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+I abandoned this project after discovering some relatively similar products/startups in production, as well as the legal hurdles in selling such a service to schools. I decided that open-sourcing and providing a free product was the only option I wanted to consider. But, at that point I wanted to focus on my coursework.
 
-Things you may want to cover:
+Please contact me if you're interested in continuing this project--the prototype works!
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+rdoc-image:prototype-screenshot.png
